<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:id="@+id/rootActivityId"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.google.ads.AdView
        android:id="@+id/adView"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="a150501033e66df"
        ads:loadAdOnCreate="true"
        ads:testDevices="TEST_EMULATOR,BAD312C4CCFDB2082EB57846614B1177" />

    <com.perso.android.free.wordrace.game.view.GameView
        android:id="@+id/BaseBallViewId"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/adView"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/matchGameOverTextViewId"
        style="@style/gameOverStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/matchGameOver"
        android:visibility="gone" />

    <TextView
        android:id="@+id/matchYouWinTextViewId"
        style="@style/matchYouWinStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/matchGameOverTextViewId"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:text="@string/matchYouWin"
        android:visibility="gone" />

    <TextView
        android:id="@+id/matchYouLooseTextViewId"
        style="@style/matchYouLooseStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/matchGameOverTextViewId"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/matchYouLoose"
        android:visibility="gone" />

    <Button
        android:id="@+id/pauseButtonId"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_above="@id/adView"
        android:background="@drawable/pause" />

    <TextView
        android:id="@+id/gameRoundId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/adView"
        android:layout_marginBottom="4dp"
        android:layout_toLeftOf="@id/pauseButtonId"
        android:text="@string/gameScoreTxt"
        android:textColor="#fff"
        android:visibility="gone" />

    <Button
        android:id="@+id/buttonMatchOver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/adView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/matchOverButton"
        android:visibility="gone" />

</RelativeLayout>